# subitobot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yaml  lastUpdated.txt
.github/workflows/: docker-publish.yml
data/: config.toml
docs/: categories.md  provinces.md  regions.md
src/: config.rs  data.rs  main.rs  notifications.rs  subito.rs
src/config/: mod.rs
src/notifications/: data.rs  mod.rs
src/subito/: data.rs  mod.rs
