[package]
name = "subitobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.25.0", features = ["full"] }
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
itertools = "0.11.0"
serde_json = "1.0.108"
